# desharnais-neural-net

./: Pipfile  README.md  lstm.csv  lstm.h5  lstm.json  lstm.py  mlp.csv  mlp.h5  mlp.json  mlp.py  pyproject.toml  requirements.txt
