[tool.poetry]
name = "desharnais-neural-net"
version = "1.0.0"
description = ""
authors = ["Eduard Predescu <eduard.florin.predescu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "^2.0.3"
tensorflow = "^2.13.0"
scikit-learn = "^1.3.0"
tensorflow-macos = { version = "^2.13.0", markers = "platform_system=='Darwin' and platform_machine=='arm64'" }
pydot = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
